--- a/index.html
+++ b/index.html
@@ -3,30 +3,59 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Cash Register</title>
       <link rel="stylesheet" href="styles.css" />
+
+      <title>Document</title>
    </head>
    <body>
-      <div class="container">
-         <h1>Cash Register</h1>
-         <div class="form-group">
-            <label for="price">Price of Item:</label>
-            <input type="number" id="price" placeholder="Enter item price" />
+      <main>
+         <img
+            class="freecodecamp-logo"
+            src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg"
+            alt="freeCodeCamp Logo"
+         />
+         <h1>Cash Register Project</h1>
+         <div id="change-due"></div>
+         <div class="input-div">
+            <label for="cash">Enter cash from customer:</label>
+            <input type="number" id="cash" class="user-input" value="" />
+            <button class="check-btn-styles" id="purchase-btn">Purchase</button>
          </div>
-         <div class="form-group">
-            <label for="cash">Cash Provided:</label>
-            <input type="number" id="cash" placeholder="Enter cash amount" />
+         <div class="container">
+            <div class="top-display-screen-container">
+               <p id="price-screen" class="price-screen">Total: $3.26</p>
+               <div class="connector"></div>
+            </div>
+            <div class="top-register">
+               <div class="btns-container">
+                  <button class="btn"></button>
+                  <button class="btn"></button>
+                  <button class="btn"></button>
+                  <button class="btn"></button>
+                  <button class="btn"></button>
+                  <button class="btn"></button>
+                  <button class="btn"></button>
+                  <button class="btn"></button>
+                  <button class="btn"></button>
+               </div>
+               <div id="cash-drawer-display" class="cash-drawer-display">
+                  <p><strong>Change in drawer:</strong></p>
+                  <p>Pennies: $1.01</p>
+                  <p>Nickels: $2.05</p>
+                  <p>Dimes: $3.1</p>
+                  <p>Quarters: $4.25</p>
+                  <p>Ones: $90</p>
+                  <p>Fives: $55</p>
+                  <p>Tens: $20</p>
+                  <p>Twenties: $60</p>
+                  <p>Hundreds: $100</p>
+               </div>
+            </div>
+            <div class="bottom-register">
+               <div class="circle"></div>
+            </div>
          </div>
-         <div class="form-group">
-            <label for="cid">Cash in Drawer:</label>
-            <textarea
-               id="cid"
-               placeholder='Enter CID (e.g., [["PENNY", 1.01], ["NICKEL", 2.05]])'
-            ></textarea>
-         </div>
-         <button id="purchase-btn">Calculate Change</button>
-         <p id="change-due"></p>
-      </div>
-      <script src="script.js"></script>
+      </main>
+      <script src="./script.js"></script>
    </body>
 </html>
